# DeMoD-Sierpinski-FX

./: README.md  demod_sierpinski_argent_metal.mid  demod_sierpinski_beat.mid  demod_sierpinski_beater.py  demod_sierpinski_fx.dsp  flake.nix  pyproject.toml
demod_sierpinski_fx.lv2/: demod_sierpinski_fx.ttl  manifest.ttl
