[project]
name = "demod-sierpinski-beater"
version = "2.4"
description = "DeMoD Sierpinski Beater v2.4 — Argent Metal Edition"
requires-python = ">=3.10"
dependencies = ["rich>=13.0", "questionary>=2.0", "pretty-midi>=0.2.10", "soundfile>=0.12", "numpy>=1.24"]
license = { text = "MIT" }
authors = [{ name = "DeMoD + Grok" }]

[project.scripts]
demod-sierpinski-beater = "demod_sierpinski_beater:main"